An update on files to fix some formatting issues on the xml document

--- a/README
+++ b/README
@@ -4,21 +4,21 @@
 
 This web app was designed as an experiment in mobile web development and as an ode to Warmachine and Hordes
 
-Anything related to Warmachine and Hordes is owned by Privateer Press, you need thier awesome minis to play the game
+Anything related to Warmachine and Hordes is owned by Privateer Press, you need thier awesome minis to play the game anyway, this is just a refernce tool and scenario generator.  if there are any legal problems please contact mail at zackglick dot com.  
 
 The code of this site is liscensed under the MIT Liscense, see the /legal.html page for additional information 
 
 
 ## Github
 
-This web app was a learning experince for me so why shouldn't it be for you.  I have all of the files except for the images/ directory stored on Github https://github.com/z1g1/SR20X
+This web app was a learning experince for me so why shouldn't it be for you.  I have all of the files stored on Github <https://github.com/z1g1/SR20X> ready to be forked and modified for your pleasure.  
 
 ## Acknowledgements 
 
 * These books helped me as I was writting the application.  Thanks to: 
 	* David Flanagan for writting JavaScript: The Definitive Guide: The Definitive Guide (Definitive Guides) http://www.amazon.com/gp/product/B004XQX4K0/ref=kinw_myk_ro_title
 	* Jonathan Stark for writting Building Android Apps with HTML, CSS, and JavaScript [Kindle Edition] http://www.amazon.com/gp/product/B0046RERZ2/ref=kinw_myk_ro_title
-* Thanks to http://www.w3schools.com/ for your searchable site
+* Thanks to http://www.w3schools.com/ for your searchable site which can help with syntax and ideas.
 
 ## Contact Information
 
