Modified the README file to corect the fact that the images are now infact included in the Github Repo

--- a/2012/README
+++ b/2012/README
@@ -11,7 +11,7 @@ The code of this site is liscensed under the MIT Liscense, see the /legal.html p
 
 ## Github
 
-This web app was a learning experince for me so why shouldn't it be for you.  I have all of the files except for the images/ directory stored on Github https://github.com/z1g1/SR20X
+This web app was a learning experince for me so why shouldn't it be for you. All of the files are stored on Github https://github.com/z1g1/SR20X, this allows anyone to fork the code and make any contributions that can help out the community.
 
 ## Acknowledgements 
 
