This is the begning of a branch to allow for a user to change which years SR rules they wish to view.  I want to use cookies to make the chagne from current year and allow the end user to change which year they are looking at.  This will mean that a lot of information will be taken out of HTML and put into HTML

--- a/README
+++ b/README
@@ -16,6 +16,7 @@ This webapp contains all of the information that a player would need to generate
 * SR Variant Information
 * SR References 
 * Offline Access
+* Access to past version of the Steamroller Rule set
 
 ## Github
 
